Fix accessibility issues and add dark mode

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -19,6 +19,11 @@ body {
   color: $text-color;
   background-color: $background-color;
   -webkit-text-size-adjust: 100%;
+
+  @include dark-mode {
+    color: $theme-dark-text-color;
+    background-color: $theme-dark-background-color;
+  }
 }
 
 /**
@@ -78,8 +83,16 @@ a {
   color: $brand-color;
   text-decoration: none;
 
+  @include dark-mode {
+    color: $theme-dark-brand-color;
+  }
+
   &:visited {
     color: darken($brand-color, 15%);
+
+    @include dark-mode {
+      color: lighten($theme-dark-brand-color, 15%);
+    }
   }
 
   &:hover {
@@ -94,12 +107,16 @@ a {
  * Blockquotes
  */
 blockquote {
-  color: $grey-color;
+  color: $grey-color-dark;
   border-left: 4px solid $grey-color-light;
   padding-left: $spacing-unit / 2;
   font-size: 18px;
   letter-spacing: -1px;
   font-style: italic;
+
+  @include dark-mode {
+    color: $grey-color-light;
+  }
 
   > :last-child {
     margin-bottom: 0;
@@ -115,6 +132,11 @@ code {
   border: 1px solid $grey-color-light;
   border-radius: 3px;
   background-color: $code-background-color;
+
+  @include dark-mode {
+    border-color: $grey-color-dark;
+    background-color: $theme-dark-code-background-color;
+  }
 }
 
 code {
@@ -138,9 +160,15 @@ pre {
 .callout {
   margin: 36px 0;
   padding: 8px 12px;
-  border: 1px solid $grey-color-light;
+  border: 1px solid $grey-color-dark;
   border-radius: 3px;
   background-color: $grey-color-light;
+
+  @include dark-mode {
+    background-color: $grey-color-dark;
+    color: $grey-color-light;
+    border-color: $grey-color-light;
+  }
 }
 
 /**
